# generator-ledger

./: .dockerignore  .env.example  .gitignore  .implementation_summary.txt  ARCHITECTURE_DIAGRAM.md  AUTO_GENERATION_SUMMARY.md  BOOKINGS_DISPLAY_GUIDE.md  BOOKINGS_QUICK_REFERENCE.md  BOOKING_FIX_SUMMARY.md  CHANGELOG.md  CHANGES_BOOKINGS_DISPLAY.md  COMMANDS.sh  DATE_ENHANCEMENT_SUMMARY.md  DUPLICATE_BOOKING_FIX.md  Dockerfile  FINAL_SUMMARY.md  Generator_Dataset.csv  IMPLEMENTATION_COMPLETE.md  IMPORTANT_BOOKINGS_READ_QUERIES.txt  IMPORTANT_NOTE.txt  INTEGRATION_GUIDE.md  MIGRATION_GUIDE.md  PLAN  PROJECT_STUDY.md  README.md  README_BOOKINGS_REDESIGN.md  START_HERE.md  TESTING_CHECKLIST.md  VERSIONING.md  Vendor_Dataset.csv  Web_integration.md  app.ipynb  app.monolith  clean_up_database.py  cli_main.py  config.py  docker-compose.yml  main.py  pyproject.toml  quick_guide.md  (+1 more)
.github/: copilot-instructions.md
Data/: Generator_Dataset.xlsx  Vendor_Dataset.xlsx
alembic/: env.py
cli/: __init__.py  cli.py
core/: __init__.py  auth.py  database.py  models.py  observability.py  permissions.py  repositories.py  services.py  utils.py  validation.py
exported_data/: Generator_Dataset.csv  Vendor_Dataset.csv  booking_items.csv  bookings.csv
scripts/: __init__.py  migrate_sqlite_to_postgres.py
tests/: conftest.py  test_auth.py  test_billing_lines_api.py  test_booking_bulk_update_api.py  test_booking_emergency_fallback_api.py  test_booking_service.py  test_bookings_page_view_actions.py  test_bookings_tree_rows.py  test_generator_inventory_features.py  test_history_gitlens_view.py  (+8 more)
(+19 files in other folders)
