[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genset"
version = "1.0.0"
description = "Generator and Booking Management System"
requires-python = ">=3.12"
dependencies = [
    "pandas>=1.5.3",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.1",
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "jinja2==3.1.3",
    "python-multipart==0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.setuptools]
packages = ["core", "cli", "web"]
